--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "emoji-mart": "^3.0.1",
+    "grapheme-splitter": "^1.0.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
