--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "copywriter",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "emoji-mart": "^3.0.1",
-    "grapheme-splitter": "^1.0.4",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
-  },
-  "devDependencies": {
-    "@types/emoji-mart": "^3.0.5",
-    "@types/react": "17.0.19",
-    "autoprefixer": "^10.3.3",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.9",
-    "typescript": "4.4.2"
-  }
+    "name": "copywriter",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "export": "next export"
+    },
+    "dependencies": {
+        "emoji-mart": "^3.0.1",
+        "grapheme-splitter": "^1.0.4",
+        "next": "11.1.2",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-icons": "^4.2.0"
+    },
+    "devDependencies": {
+        "@types/emoji-mart": "^3.0.5",
+        "@types/react": "17.0.19",
+        "autoprefixer": "^10.3.3",
+        "eslint": "7.32.0",
+        "eslint-config-next": "11.1.2",
+        "postcss": "^8.3.6",
+        "tailwindcss": "^2.2.9",
+        "typescript": "4.4.2"
+    }
 }
